# personal-parquet-viewer

./: .gitignore  CLAUDE.md  README.md  mise.toml
.github/workflows/: deploy.yml  test.yml
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/src/lib/: types.ts
frontend/src/routes/: +page.svelte
frontend/tests/: parquet-viewer.spec.ts
frontend/tests/fixtures/: small.parquet  small2.parquet  small3.parquet
scripts/: README.md  generate_test_parquet.py  parquet_test_data1.py  parquet_test_data2.py  parquet_test_data3.py  pyproject.toml
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: integration_test.rs
