[package]
name = "parquet-viewer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
parquet = "53"
arrow = "53"
js-sys = "0.3"
console_error_panic_hook = "0.1"
bytes = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["File", "FileReader", "console"]

[profile.release]
opt-level = "z"
lto = true
